Make sure parent modules are loaded into workspace before those that depend on them